título de últimos avisos para agregar los últimos 5 a la vista de la portada

--- a/tarea1/index.html
+++ b/tarea1/index.html
@@ -11,6 +11,6 @@
     <a href="agregaraviso.html">Agregar aviso</a>
     <a href="listado.html">Ver listado</a>
     <a href="estadisticas.html">Ver estadísticas</a>
-    
+    <h2>Últimos avisos</h2>
 </body>
 </html>
