--- a/tarea1/estadisticas.html
+++ b/tarea1/estadisticas.html
@@ -4,10 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estadísticas</title>
+    <style>
+        .grid{display:grid;gap:1rem}
+        @media(min-width:768px){.grid{grid-template-columns:repeat(3,1fr)}}
+        .card{border:1px solid #ccc;padding:.75rem}
+        .t{text-align:center;margin:.25rem 0 .5rem 0}
+        svg{width:100%;height:auto;display:block}
+  </style>
 </head>
 <body>
-    <h1>Estadísticas</h1>
+
     <a href="index.html">Volver</a>
-    
+    <h1>Estadísticas</h1>
+
+  <section class="grid">
+    <div class="card">
+      <h2 class="t">Avisos por día</h2>
+      <svg viewBox="0 0 320 200" role="img" aria-label="Línea de avisos por día">
+        <rect x="0" y="0" width="320" height="200" fill="#fff" stroke="#ccc"/>
+        <polyline fill="none" stroke="#007aff" stroke-width="2"
+          points="20,160 60,140 100,120 140,150 180,110 220,90 260,70 300,80"/>
+        <g fill="#555" font-size="10">
+          <text x="20" y="180">D1</text><text x="60" y="180">D2</text><text x="100" y="180">D3</text>
+          <text x="140" y="180">D4</text><text x="180" y="180">D5</text><text x="220" y="180">D6</text>
+          <text x="260" y="180">D7</text>
+        </g>
+      </svg>
+    </div>
+
+    <div class="card">
+      <h2 class="t">Total por tipo</h2>
+      <svg viewBox="0 0 220 220" role="img" aria-label="Torta gatos vs perros">
+        <circle cx="110" cy="110" r="100" fill="#eee"/>
+        <path d="M110 110 L110 10 A100 100 0 0 1 197.6 157.1 Z" fill="#ff9500"/>
+        <path d="M110 110 L197.6 157.1 A100 100 0 1 1 110 10 Z" fill="#34c759"/>
+        <g fill="#555" font-size="12">
+          <rect x="10" y="190" width="10" height="10" fill="#34c759"/><text x="25" y="199">Perros</text>
+          <rect x="110" y="190" width="10" height="10" fill="#ff9500"/><text x="125" y="199">Gatos</text>
+        </g>
+      </svg>
+    </div>
+
+    <div class="card">
+      <h2 class="t">Avisos por mes</h2>
+      <svg viewBox="0 0 360 220" role="img" aria-label="Barras por mes gatos y perros">
+        <rect x="0" y="0" width="360" height="220" fill="#fff" stroke="#ccc"/>
+        <g>
+          <rect x="30" y="120" width="30" height="80" fill="#34c759"/>
+          <rect x="65" y="100" width="30" height="100" fill="#ff9500"/>
+          <rect x="130" y="140" width="30" height="60" fill="#34c759"/>
+          <rect x="165" y="80" width="30" height="120" fill="#ff9500"/>
+          <rect x="230" y="110" width="30" height="90" fill="#34c759"/>
+          <rect x="265" y="130" width="30" height="70" fill="#ff9500"/>
+        </g>
+        <g fill="#555" font-size="10">
+          <text x="35" y="210">E</text><text x="135" y="210">F</text><text x="235" y="210">M</text>
+          <text x="70" y="210">E</text><text x="170" y="210">F</text><text x="270" y="210">M</text>
+          <rect x="10" y="10" width="10" height="10" fill="#34c759"/><text x="25" y="19">Perros</text>
+          <rect x="90" y="10" width="10" height="10" fill="#ff9500"/><text x="105" y="19">Gatos</text>
+        </g>
+      </svg>
+    </div>
+  </section>
+
+  <p style="margin-top:1rem"><a href="index.html">Volver a la portada</a></p>
 </body>
 </html>
